<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="justgallery">Only save to gallery</string>
    <string name="image_saved">Image saved.</string>
    <string name="shorten">shorten</string>
    <string name="pref_settings">Settings</string>
    <string name="pref_update_category_title">Updates</string>
    <string name="pref_update_title">Sign up for updates</string>
    <string name="pref_update_summary">Receive updates about the latest apps</string>
    <string name="app_name">Pickup Lines</string>
    <string name="app_name_jokes">Funny Jokes</string>
    <string name="app_name_discuss">Discussion Forum</string>
    <string name="app_name_love">Love Poems</string>
    <string name="send_email">Send</string>
    <string name="blurb_options_title">Options</string>
    <string name="edit_profile">Edit profile</string>
    <string name="add_text">Add own text</string>
    <string name="edit_profile_title">Edit Your Profile</string>
    <string name="nickname">Nickname</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="about_you">About you</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="profile_saved">Profile saved.</string>
    <string name="profile_saving_failed">Saving profile failed.</string>
    <string name="please_wait">Please wait...</string>
    <string name="error_not_connected">Error! Are you connected to the internet?</string>
    <string name="ok">Ok</string>
    <string name="thanks_for_rating">Thanks for rating!</string>
    <string name="pickup_subject">funny pickup line!</string>
    <string name="send_email_title">Send Pickup Line:</string>
    <string name="add_pickup_line">Add pickup line</string>
    <string name="add_pickup_reminder">Please press menu to add own pickup lines.</string>
    <string name="rate_this">Rate this line</string>
    <string name="refresh">Refresh</string>
    <string name="added_pickup_line">Added pickup line! Press menu to add another one.</string>
    <string name="add_your_pickup_line">Add your pickup line</string>
    <string name="loading_more">Loading more...</string>
    <string name="votes">%d votes</string>
    <string name="votes_comments" formatted="false">%d votes / %d comments</string>
    <string name="loading">Loading...</string>
    <string name="time_minutes">%d min ago</string>
    <string name="time_hours_minutes" formatted="false">%d hr %d min ago</string>
    <string name="time_days_hours" formatted="false">%d days %d hr ago</string>
    <string name="time_days">%d days ago</string>
    <string name="author_info" formatted="false">by %s, %s</string>
    <string name="favorites">Favorites</string>
    <string name="back">Back</string>
    <string name="about_author">About the author</string>
    <string name="more_from_author">View more from this author</string>
    <string name="messages_from">Messages from %s</string>
    <string name="added_favorite">Added to favorites</string>
    <string name="removed_favorite">Removed from favorites</string>
    <string name="favorite_off">Favorite</string>
    <string name="favorite_on">Remove from favorites</string>
    <string name="your_favorites">Your favorites</string>
    <string name="thanks_flagging">Thanks for reporting this.</string>
    <string name="click_for_more">(click for more)</string>
    <string name="retry">Retry</string>
    <string name="preferences">Preferences</string>
    <string name="pickup_footer">Sent from Pickup Lines http://bit.ly/2AC2su</string>
    <string name="flag">Flag</string>
    <string name="delete">Delete</string>
    <string name="comments">Comments</string>
    <string name="view_comments">View comments</string>
    <string name="comment_added">Your comment was added. It will appear in a few minutes.</string>
    <string name="allow_comments">Allow commenting</string>
    <string name="enabled_commenting">Enabled commenting</string>
    <string name="disabled_commenting">Disabled commenting</string>
    <string name="delete_comment_hint">Long press on a comment to delete.</string>
    <string name="delete_comment_confirm">Delete this comment?</string>
    <string name="comment_deleted">Comment deleted. It will disappear in a few minutes.</string>
    <string name="add_comment">Add comment</string>
    <string name="delete_comment">Delete comment</string>
    <string name="no_comments_yet">There are not comments yet.</string>
    <string name="extra_line">Yeah baby!</string>
    <string name="offerwall_menu">New Apps!</string>
    <string name="add_joke_title">Add a joke</string>
    <string name="added_joke">Added your joke! Press menu to add another one.</string>
    <string name="add_your_joke">Add your joke</string>
    <string name="loading_categories_failed">Loading of categories failed. Please check your internet connection.</string>
    <string name="loading_error">Loading error.</string>
    <string name="loading_jokes">Loading jokes...</string>
    <string name="extra_email_line_jokes">It is so funny!</string>
    <string name="email_subject_jokes">funny joke!</string>
    <string name="send_email_title_jokes">Send Joke:</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_profile">My Profile</string>
    <string name="jokes_footer">Sent from Funny Jokes http://bit.ly/1DOFTl</string>
    <string name="loading_threads">Loading topics...</string>
    <string name="loading_categories">Loading categories...</string>
    <string name="app_name_chat">Live Chat</string>
    <string name="google_account_connect">Connect with Google</string>
    <string name="pref_google_account_connect">Connect with Google</string>
    <string name="pref_google_account_connect_summary">Private messages, notifications, and more</string>
    <string name="google_account_intro">"Sign into Live Chat with your Google account gives you these advantages:

 ● Send private messages to your followers
 ● Receive email notifications (can be disabled)
 ● Keep your Live Chat account and followers if you switch to a new phone
 
 Your email address will not be visible to other users."</string>
    <string name="add_love_title">Add a poem</string>
    <string name="added_love">Added your poem! Press menu to add another one.</string>
    <string name="add_your_love">Add your poem</string>
    <string name="loading_love">Loading poems...</string>
    <string name="extra_email_line_love">"It's the most romantic android app!"</string>
    <string name="send_email_title_love">Send Poem</string>
    <string name="add_love_reminder">Please press menu to add your poem!</string>
    <string name="love_footer">Sent from Love Poems http://bit.ly/34a7xx</string>
    <string name="love_subject">I love you!</string>
    <string name="themeTitleGray">Gray Theme</string>
    <string name="themeTitleBlue">Blue Theme</string>
    <string name="themeTitleBlack">Black Theme</string>
    <string name="themeTitleGreen">Green Theme</string>
</resources>
