<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_settings" android:orderingFromXml="true">
        <CheckBoxPreference android:title="Limit text length" android:key="limit_length" android:summary="Show 'click for more' for long texts" android:defaultValue="true" />
        <EditTextPreference android:title="Subject" android:key="subject" android:summary="Edit the subject when sending" android:defaultValue="@string/pickup_subject" android:dialogTitle="Subject Text" />
        <EditTextPreference android:title="Footer" android:key="footer" android:summary="Edit the default footer added when sending" android:defaultValue="@string/pickup_footer" android:dialogTitle="Footer Text" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_update_category_title" android:orderingFromXml="true">
        <Preference android:title="@string/pref_update_title" android:key="newsletter" android:summary="@string/pref_update_summary" />
    </PreferenceCategory>
</PreferenceScreen>