<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ffdddddd" android:id="@id/TextView02" android:background="#ff888888" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/edit_profile_title" />
        <LinearLayout android:id="@id/LinearLayout03" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip">
            <ImageView android:layout_gravity="center" android:id="@id/author_image" android:background="#ffdddddd" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/avatar" android:adjustViewBounds="false" android:maxWidth="64.0dip" android:maxHeight="64.0dip" android:cropToPadding="true" />
            <Button android:layout_gravity="center_vertical" android:id="@id/pick_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Pictures" android:layout_weight="1.0" />
            <Button android:layout_gravity="center" android:id="@id/take_photo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Take photo" android:layout_weight="1.0" />
        </LinearLayout>
        <TextView android:gravity="center|right" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nickname" />
        <EditText android:id="@id/nickname" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" />
        <RadioGroup android:orientation="horizontal" android:id="@id/RadioGroup01" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <RadioButton android:id="@id/male" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/male" />
            <RadioButton android:id="@id/female" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/female" />
        </RadioGroup>
        <LinearLayout android:layout_gravity="right" android:id="@id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.5">
            <TextView android:gravity="center|right" android:layout_gravity="center_vertical" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/age" />
            <Spinner android:id="@id/AgeSpinner" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView android:gravity="center|right" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_you" />
        <EditText android:id="@id/about" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:lines="4" android:scrollHorizontally="true" android:singleLine="false" />
        <LinearLayout android:gravity="right" android:id="@id/LinearLayout02" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save" android:layout_weight="1.0" />
            <Button android:id="@id/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>