<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/LinearLayout07" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="17.0sp" android:id="@id/preview" android:paddingLeft="5.0dip" android:paddingTop="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="funny pickup line goes in here" android:scrollHorizontally="false" android:singleLine="false" />
    <TextView android:textSize="13.0sp" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/short_info" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="by user name (5hr 24 min ago)" android:layout_weight="1.0" />
    <TextView android:textStyle="bold" android:textColor="?android:panelColorForeground" android:id="@id/TextView04" android:background="?android:panelColorBackground" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Rate this" />
    <RatingBar android:layout_gravity="center" android:id="@id/rating" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:stepSize="1.0" />
    <TextView android:textStyle="bold" android:textColor="?android:panelColorForeground" android:id="@id/OptionPanelTitle" android:background="?android:panelColorBackground" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/blurb_options_title" />
    <LinearLayout android:id="@id/ButtonPanel" android:paddingTop="2.0dip" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageButton android:id="@id/starbutton" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_menu_star" android:layout_weight="1.0" />
        <ImageButton android:id="@id/favorite" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/heart" android:layout_weight="1.0" />
        <ImageButton android:id="@id/email" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_menu_share" android:layout_weight="1.0" />
        <ImageButton android:id="@id/flag_button" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_menu_block" android:layout_weight="1.0" />
        <Button android:id="@id/delete_button" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/delete" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/author_section" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textStyle="bold" android:textColor="?android:panelColorForeground" android:id="@id/TextView04" android:background="?android:panelColorBackground" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_author" />
        <com.appspot.swisscodemonkeys.pickup.AboutAuthorView android:id="@id/author_info" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textSize="20.0sp" android:id="@id/view_more" android:paddingTop="10.0dip" android:paddingBottom="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/more_from_author" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/comment_section" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textStyle="bold" android:textColor="?android:panelColorForeground" android:id="@id/TextView04" android:background="?android:panelColorBackground" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/comments" />
        <TextView android:textSize="20.0sp" android:id="@id/view_comments" android:paddingTop="10.0dip" android:paddingBottom="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/view_comments" />
        <CheckBox android:textSize="20.0sp" android:id="@id/allow_comments" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/allow_comments" />
        <TextView android:id="@id/delete_comment_hint" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/delete_comment_hint" />
        <TextView android:id="@id/no_comments_yet" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/no_comments_yet" />
    </LinearLayout>
</LinearLayout>