<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TabHost android:id="@id/tabhost" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentTop="true">
        <TabWidget android:id="@android:id/tabs" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <FrameLayout android:id="@android:id/tabcontent" android:paddingTop="65.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.appspot.swisscodemonkeys.pickup.BlurbListWidget android:id="@id/ListView01" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            <com.appspot.swisscodemonkeys.pickup.BlurbListWidget android:id="@id/ListView02" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            <com.appspot.swisscodemonkeys.pickup.BlurbListWidget android:id="@id/ListView03" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout02" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="6.0dip">
                <LinearLayout android:gravity="center" android:id="@id/LinearLayout03" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <Button android:id="@id/add" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/add_text" android:layout_weight="1.0" />
                    <Button android:id="@id/profile" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/edit_profile" android:layout_weight="1.0" />
                    <Button android:id="@id/favorites" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/favorites" android:layout_weight="1.0" />
                </LinearLayout>
                <com.appspot.swisscodemonkeys.pickup.BlurbListWidget android:id="@id/ListView04" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            </LinearLayout>
        </FrameLayout>
    </TabHost>
</RelativeLayout>